terraform/1-vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr
  tags       = merge(var.tags, { Name = "${var.project_name}-VPC" })
}
